<resources>
    <string name="app_name">FrontCareProject</string>
    <string name="MainTitle">Welcome to FrontCare</string>
    <string name="LogInButtonText">Click here to login</string>
    <string name="RegisterButtonText">No account? Register here</string>
    <string name="soldier">Soldier</string>
    <string name="donor">Donor</string>
    <string name="register_title">Register Here</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_location">Location</string>
    <string name="register_button_register">Register</string>
    <string name="login_login">Login</string>
    <string name="log_in_welcome">Logging in as %s</string>
    <string name="profile_picture_select">Profile Picture</string>
    <string name="profile_title">Your Profile</string>
    <string name="login_failed_message">Login failed:\nEmail or password are incorrect</string>
    <string name="register_phone">Phone Number</string>
    <string name="edit_profile_title">Edit Your Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="default_string">DEFAULT</string>
    <string name="requests_history_button">My Requests</string>
    <string name="donations_history_button">My Donations</string>
    <string name="events_history_button">My Events</string>
    <string name="full_name_element">Full Name:</string>
    <string name="date_element">Date:</string>
    <string name="status_element">Status</string>
    <string name="products_element">Products</string>
    <string name="close_date_element">Close date</string>
    <string name="address_element">Address</string>
    <string name="remaining_element">Remaining:</string>
    <string name="organizer_element">Organizer</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="edit_button_history_tables">Edit</string>
    <string name="edit_request_title">Edit Request</string>
    <string name="from_donor_column">From</string>
    <string name="to_soldier_column">To</string>
    <string name="products"><u>Products</u></string>
    <string name="details_buttons_text">Details</string>

    //maor: strings for the donors event page, you can take some for your own tables with similar columns titles:
    <string name="donors_events_page_title">Donors Events</string>
    <string name="details_buttons_column_text">Details</string>
    <string name="event_date_column_text">Event Date</string>
    <string name="event_location_column_text">Event Location</string>
    <string name="remaining_spots_column_text">Remaining Spots</string>
    <string name="soldiers_requests_page_title">Choose a donation:</string>
    <string name="request_date_column_text">Request Date</string>
    <string name="first_name_column_text">First Name</string>
    <string name="pickup_location_column_text">Pickup Location</string>
    <string name="leave_button">Leave</string>
    <string name="edit__event_title">Edit your event</string>
    <string name="button_edit_event">Edit event</string>
    <string name="describe_product_list">Choose products for the event</string>


    <string-array name="locations_array">
        <item>North</item>
        <item>Center</item>
        <item>South</item>
    </string-array>

    <string-array name="posting_history_options">
        <item>Details</item>
        <item>Edit</item>
        <item>Confirm</item>
    </string-array>


</resources>