<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"

    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/black"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </TextView>


    <RadioGroup
        android:id="@+id/radioGrpSelectType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle">

        <RadioButton
            android:id="@+id/radioSoldier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/soldier"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absouteY="120dp" />

        <RadioButton
            android:id="@+id/radioDonor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/donor"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="120dp" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/imgBtnPfp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_picture_select"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpSelectType"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="148dp"
        android:autofillHints="name"
        android:hint="@string/register_first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpSelectType"
        tools:layout_editor_absoluteX="0dp">

    </EditText>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="name"
        android:hint="@string/register_last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName">

    </EditText>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="emailAddress"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etLastName">

    </EditText>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="phone"
        android:hint="@string/register_phone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

    </EditText>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="emailAddress"
        android:hint="@string/register_username"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etPhone">

    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="Password"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etUserName">

    </EditText>

    <EditText
        android:id="@+id/etDonationLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="Donation Location"
        android:hint="@string/register_location"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword">

    </EditText>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"

        android:text="@string/register_button_register"
        android:textSize="25sp"

        app:layout_constraintTop_toBottomOf="@+id/etDonationLocation"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>