<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    tools:context=".Profile">

    <TextView
        android:id="@+id/SoldierProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SoldierProfileTitle" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:stretchColumns="1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:id="@+id/FirstNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvProfileFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_first_name"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:id="@+id/ShowProfileFirstName"
                android:layout_height="wrap_content"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/LastNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvSoldierProfileLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_last_name"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:id="@+id/ShowProfileLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/EmailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_email"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:id="@+id/ShowProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/PhoneRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/PhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_phone"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:id="@+id/ShowPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/LocationRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ProfileLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_location"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:id="@+id/ShowProfileLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

        </TableRow>

    </TableLayout>

    <!-- Maor: temporary button for redirecting to SoldiersRequestsPage for testing -->

    <Button
        android:id="@+id/btnGoToEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toTopOf="@+id/btnSoldiersRequests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0">

    </Button>

    <Button
        android:id="@+id/btnSoldiersRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="Go to Soldiers Requests Page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btnDonorsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Go to DonorList Page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSoldiersRequests" />


</androidx.constraintlayout.widget.ConstraintLayout>