<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".UserEvents">
    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar" />
    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/tvEventHistoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/events_history_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="parent"
        >

    </TextView>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/tvEventHistoryTitle"
        >

        <HorizontalScrollView
            android:id="@+id/scrollEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/eventsTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/tablesBackgroundColor"
                android:stretchColumns="*">

                <!-- Header row -->
                <TableRow>

                    <TextView
                        android:id="@+id/editEventColumn"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/tvOrganizerColumn"
                        android:background="@drawable/tables_outline"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/organizer_element"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end" />

                    <TextView
                        android:id="@+id/tvDateColumn"
                        android:background="@drawable/tables_outline"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/date_element"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end" />

                    <TextView
                        android:id="@+id/tvLocationColumn"
                        android:background="@drawable/tables_outline"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/register_location"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end" />

                    <TextView
                        android:id="@+id/tvAddressColumn"
                        android:background="@drawable/tables_outline"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/address_element"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end" />
                </TableRow>
                <!-- Data rows will be added dynamically -->
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="45dp"
        android:text="Create new event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>